"Added darkaonline/l5-swagger package and its dependencies to composer.json and updated composer.lock"
