# app/Http/Controllers/Api/ProductController.php
@@ -7,7 +7,11 @@ use App\Http\Resources\CategoryResource;
 use App\Http\Resources\ProductResource;
 use App\Models\Product;
 use Illuminate\Http\Request;
-
+/**
+ * @group Products
+ *
+ *  Managing products
+ */
 class ProductController extends Controller
 {
     public function index()
